--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@material-ui/icons": "^4.11.2",
     "next": "10.2.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.34.0"
   },
   "devDependencies": {
     "@types/react": "17.0.6",
