--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "start": "next start -p 8000"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@fontsource/roboto": "^4.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.1",
+    "@mui/styles": "^5.5.1",
+    "@tinymce/tinymce-react": "^3.13.1",
+    "axios": "^0.26.1",
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
