--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/styles": "^5.5.1",
     "@tinymce/tinymce-react": "^3.13.1",
     "axios": "^0.26.1",
+    "jwt-decode": "^3.1.2",
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
